--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "3.19.0",
     "eslint-plugin-flowtype": "2.34.0",
     "eslint-plugin-react": "7.0.1",
+    "flow-bin": "0.47.0",
     "jest": "20.0.4",
     "jest-cli": "20.0.4"
   },
