Going well so far...

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,8 @@
     "next/babel"
   ],
   "plugins": [
+    "flow-react-proptypes",
+    "transform-flow-strip-types",
     [
       "styled-components",
       {
