--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-dom": "15.5.4",
     "redux": "3.6.0",
     "styled-components": "2.0.0",
-    "svg-sprite-loader": "3.0.3",
+    "svg-sprite-loader": "^3.0.4",
     "webpack": "2.6.1"
   }
 }
